src/objects/Treatment_Option__c.object
<CustomObject>
    <fields>
        <fullName>Arch_count__c</fullName>
        <description>This is the number of arches a procedure occupies.</description>
        <label>Arch count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <label>Benefits</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>Arch Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considerations__c</fullName>
        <label>Considerations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <label>Copy</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lower_Tag__c</fullName>
        <label>Lower Tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>AO4</fullName>
                </value>
                <value>
                    <fullName>Zirconia</fullName>
                </value>
                <value>
                    <fullName>Unitary</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Arch Upgrade</fullName>
                </value>
                <value>
                    <fullName>Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Treatment_Map__c</fullName>
        <label>Old Treatment Map</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Implant</fullName>
                </value>
                <value>
                    <fullName>Multiple Implants</fullName>
                </value>
                <value>
                    <fullName>Multiple Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Lower</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Lower</fullName>
                </value>
                <value>
                    <fullName>DBL AO4</fullName>
                </value>
                <value>
                    <fullName>DBL AO4 Edentulous</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Transitional DBL AO4</fullName>
                </value>
                <value>
                    <fullName>None Given</fullName>
                </value>
                <value>
                    <fullName>Lower Overdenture</fullName>
                </value>
                <value>
                    <fullName>Upper Overdenture</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Upper AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Lower AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Double AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Value__c</fullName>
        <description>Usually zero or one, a factor associated with the &apos;start&apos; which could be between zero and one.</description>
        <label>Start Value</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Class__c</fullName>
        <label>Treatment Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AO4 Arch Complex</fullName>
                </value>
                <value>
                    <fullName>AO4 Arch Simple</fullName>
                </value>
                <value>
                    <fullName>Double AO4 Arch</fullName>
                </value>
                <value>
                    <fullName>Non-Arch Treatment</fullName>
                </value>
                <value>
                    <fullName>Arch Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Grade__c</fullName>
        <label>Treatment Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Better</fullName>
                </value>
                <value>
                    <fullName>Best</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Type__c</fullName>
        <label>Treatment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AO4 Arch</fullName>
                </value>
                <value>
                    <fullName>AO4 Arch - Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Arch - Denture</fullName>
                </value>
                <value>
                    <fullName>AO4 Arch - Multiple</fullName>
                </value>
                <value>
                    <fullName>AO4 Arch - Unitary</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Bridge - Denture</fullName>
                </value>
                <value>
                    <fullName>Bridge - Double</fullName>
                </value>
                <value>
                    <fullName>Bridge - Unitary</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - AO4</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - Bridge</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - Denture</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - Multiple</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - Phased Arch</fullName>
                </value>
                <value>
                    <fullName>Crystal Arch - Unitary</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
                <value>
                    <fullName>Denture - Double</fullName>
                </value>
                <value>
                    <fullName>Double AO4</fullName>
                </value>
                <value>
                    <fullName>Double Arch - Crystal</fullName>
                </value>
                <value>
                    <fullName>Double Arch - Crystal/Zirconia</fullName>
                </value>
                <value>
                    <fullName>Double Arch - Zirconia</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Multiple - Bridge</fullName>
                </value>
                <value>
                    <fullName>Multiple - Denture</fullName>
                </value>
                <value>
                    <fullName>Multiple - Double</fullName>
                </value>
                <value>
                    <fullName>Multiple - Unitary</fullName>
                </value>
                <value>
                    <fullName>Phased Arch</fullName>
                </value>
                <value>
                    <fullName>Phased Arch - AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Arch - Bridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_Tag__c</fullName>
        <label>Upper Tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>AO4</fullName>
                </value>
                <value>
                    <fullName>Zirconia</fullName>
                </value>
                <value>
                    <fullName>Unitary</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Arch Upgrade</fullName>
                </value>
                <value>
                    <fullName>Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Treatment Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Upper_Tag__c</columns>
        <columns>Lower_Tag__c</columns>
        <columns>Benefits__c</columns>
        <columns>Considerations__c</columns>
        <columns>Copy__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Value__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Treatment Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatment Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>